deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-app
spec:
  selector:
    matchLabels:
      app: express-app
  replicas: 1
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
        - name: express-app-container
          image: omaralhamad/express:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 3
