deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <your-service-name>
spec:
  selector:
    app: <your-app-name>
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
